<resources>
    <string name="app_name">MahShop</string>

    <string name="checkout">Checkout</string>
    <string name="default_price_value">$0.00</string>
    <string name="dollar_sign">$</string>
    <string name="tps_rate">0.05</string>
    <string name="tpq_rate">0.09975</string>
    <string name="quantity_label">Quantity:</string>
    <string name="minus_symbol">-</string>
    <string name="plus_symbol">+</string>
    <string name="subtotal_label">Subtotal:</string>
    <string name="quantity_default_value">0</string>

    <string name="name1">Bento Box</string>
    <string name="price1">15.99</string>
    <string name="description1">Have a taste of Japan\'s home box meal. Featuring sushi with
    smoked salmon, avocado and carrots, with the rice seasoned in sunflower seeds and soy
    sauce! In another section, we have broccoli and freshly cooked chicken, also covered in
    soy sauce. Have a taste of Japan\'s fried shrimps, complemented with a side of Japanese
    styled salad!</string>

    <string name="name2">Dragon Sushi Roll</string>
    <string name="price2">18.59</string>
    <string name="description2">Taste the power of the dragon sushi! Features sticky rice, seaweed,
        smoked salmon, sesame seeds and carrots. Each piece of sushi is topped with freshly cut
        avocado, while the head has finely sliced avocadoes delicately put together.</string>

    <string name="name3">Sour and Spicy Soup</string>
    <string name="price3">9.99</string>
    <string name="description3">A spicy and yet sour taste, this soup will be sure to provide an
        extremely spicy taste. Yet, it has rich flavours.</string>

    <string name="name4">Egg Rolls</string>
    <string name="price4">3.99</string>
    <string name="description4">Homemade eggrolls using only the finest and freshest ingredients.
    Each bite gives a crunchy and savoury taste. The perfect harmony of ingredients!</string>

    <string name="name5">Fried Rice</string>
    <string name="price5">8.99</string>
    <string name="description5">Rice cooked with perfection! It is fried and mixed with a variety
    of fresh vegetables and meat!</string>

    <string name="name6">Asian Cuisine Beef</string>
    <string name="price6">7.59</string>
    <string name="description6">Seasoned and cooked to perfection! The Asian Cuisine beef is
    mouth-watering and savoury!</string>

    <string name="name7">Soy Noodles</string>
    <string name="price7">6.79</string>
    <string name="description7">Noodles coated with the finest soy sauce! Full of richness and
    flavor! Served with fried broccoli, carrots and asparagus.</string>

    <string name="name8">Spicy Dumplings</string>
    <string name="price8">8.29</string>
    <string name="description8">Handmade fried dumplings made using the best meat and vegetables.
    Uses wrapping made entirely from scratch. All coated in soy sauce and very hot spices!</string>

    <string name="name9">Spicy Noodles</string>
    <string name="price9">10.19</string>
    <string name="description9">Handmade noodles mixed with green pepper, onions, beef and spicy
    chicken soup!</string>

    <string name="name10">Thai Sticky Rice</string>
    <string name="price10">12.29</string>
    <string name="description10">Unique dish with Thai rice never seen before here! The flavors shine
    for each bite! Complemented with eggrolls, grilled vegetables coated with our finest and special
    sauces, and our signature sauce!</string>

    <string name="main_description">Enjoy shopping for food from the comfort of your own home! This is MahShop.</string>
    <string name="begin_button_text">Begin</string>
    <string name="welcome_msg">Welcome!</string>
    <string name="thank_you_msg">Thank you for using my shopping application!</string>
    <string name="item_header">Item</string>
    <string name="unit_price_header">Unit price</string>
    <string name="quantity_header">Quantity</string>
    <string name="cost_header">Cost</string>
    <string name="total_label">Total:</string>
    <string name="tpq_label">TPQ:</string>
    <string name="tps_label">TPS:</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="currencyMessage">All prices are in CAD</string>
    <string name="title_shipping_options">Shipping Options</string>
    <string name="button_text_checkout">Checkout</string>
    <string name="button_text_back">Go back</string>
    <string name="toast_need_shipping_option_msg">You must select a shipping option!</string>
    <string name="title_menu_and_options">Prices and rates</string>
    <string name="header_shipping_rates">Shipping rates:</string>
    <string name="button_text_ok">Ok</string>
    <string name="title_currently_in_cart">Currently in cart:</string>
    <string name="blank_cart_text">Nothing in the cart</string>
    <string name="title_your_shopping_cart">Your shopping cart</string>
    <string name="title_costs_summary">Prices and rates</string>
    <string name="title_empty_cart">Empty your cart</string>

</resources>
