<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/billTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/item_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/item_header"
                        android:textSize="@dimen/bill_header_textSize" />

                    <TextView
                        android:id="@+id/unit_price_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unit_price_header"
                        android:textSize="@dimen/bill_header_textSize" />

                    <TextView
                        android:id="@+id/quantity_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity_header"
                        android:textSize="@dimen/bill_header_textSize" />

                    <TextView
                        android:id="@+id/cost_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cost_header"
                        android:textSize="@dimen/bill_header_textSize" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>