<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView1"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="271dp"
                app:srcCompat="@drawable/spicyandsoursoup" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name_text"
                    android:layout_width="173dp"
                    android:layout_height="34dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/name1" />

                <TextView
                    android:id="@+id/price_text"
                    android:layout_width="139dp"
                    android:layout_height="34dp"
                    android:layout_alignBottom="@+id/name_text"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/name_text"
                    android:tag="p1"
                    android:text="@string/price1"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/description_text"
                    android:layout_width="328dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_text"
                    android:layout_alignStart="@+id/name_text"
                    android:layout_alignEnd="@+id/price_text"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="0dp"
                    android:text="@string/description1" />

                <TextView
                    android:id="@+id/quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_text"
                    android:layout_alignStart="@+id/name_text"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="13dp"
                    android:text="@string/quantity_label" />

                <Button
                    android:id="@+id/decrement_button"
                    android:layout_width="45dp"
                    android:layout_height="32dp"
                    android:layout_below="@+id/quantity_label"
                    android:layout_alignStart="@+id/name_text"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="3dp"
                    android:onClick="changeQuantity"
                    android:tag="d1"
                    android:text="@string/minus_symbol" />

                <Button
                    android:id="@+id/increment_button"
                    android:layout_width="45dp"
                    android:layout_height="32dp"
                    android:layout_below="@+id/quantity_label"
                    android:layout_alignBottom="@+id/decrement_button"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/decrement_button"
                    android:onClick="changeQuantity"
                    android:tag="i1"
                    android:text="@string/plus_symbol" />

                <TextView
                    android:id="@+id/subtotal_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/quantity_label"
                    android:layout_alignBottom="@+id/quantity_label"
                    android:layout_marginStart="113dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="-1dp"
                    android:layout_toEndOf="@+id/quantity_text"
                    android:text="@string/subtotal_label" />

                <TextView
                    android:id="@+id/subtotal_text"
                    android:layout_width="73dp"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/subtotal_label"
                    android:layout_alignEnd="@+id/description_text"
                    android:layout_alignBottom="@+id/quantity_label"
                    android:layout_marginStart="11dp"
                    android:layout_marginTop="-1dp"
                    android:layout_marginEnd="-1dp"
                    android:layout_marginBottom="0dp"
                    android:layout_toEndOf="@+id/subtotal_label"
                    android:text="@string/subtotal_default_value"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/quantity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/quantity_label"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="0dp"
                    android:layout_toEndOf="@+id/quantity_label"
                    android:tag="q1"
                    android:text="@string/quantity_default_value" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>